--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -23,6 +23,6 @@
 </div>
 
 <div class="gold-rate text-center kt-aside__gold-rate" *ngIf="showGoldRateFlag">
-	<span class="">Gold rate: </span>{{goldRateService.goldRate$ | async}} /gm
+	<span class="gold-rate__label">Gold rate: </span>{{goldRateService.goldRate$ | async}} /gm
 </div>
 <!-- end:: Brand -->
