--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/payment-dialog/payment-dialog.component.html
@@ -18,7 +18,7 @@
                                     [class.isError]="controls.paymentType.touched && controls.paymentType.invalid">
                                     <option value="" selected disabled>Select Payment</option>
                                     <option value="cash">CASH</option>
-                                    <option value="neft">RTGS/NEFT/IMPS</option>
+                                    <option value="IMPS">RTGS/NEFT/IMPS</option>
                                     <option value="cheque">CHEQUE</option>
                                 </select>
 
@@ -29,49 +29,75 @@
                             </div>
                         </div>
 
-                        <div *ngIf="controls.paymentType.value === 'neft' || controls.paymentType.value === 'cheque'">
-                            <div class="row kt-margin-b-15">
-                                <div class="col-4 form-label mandatory">
-                                    <mat-label>Deposit Bank Name</mat-label>
+                        <div>
+                            <div
+                                *ngIf="controls.paymentType.value === 'IMPS' || controls.paymentType.value === 'cheque'">
+                                <div class="row kt-margin-b-15">
+                                    <div class="col-4 form-label mandatory">
+                                        <mat-label>Deposit Bank Name</mat-label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input class="form-control" formControlName="bankName" placeholder="Bank Name"
+                                            [class.isError]="controls.bankName.touched && controls.bankName.invalid" />
+
+                                        <mat-error
+                                            *ngIf="controls.bankName.touched && controls.bankName.errors?.required">
+                                            Required field
+                                        </mat-error>
+                                    </div>
                                 </div>
-                                <div class="col-8">
-                                    <input class="form-control" formControlName="bankName"
-                                        [class.isError]="controls.bankName.touched && controls.bankName.invalid" />
 
-                                    <mat-error *ngIf="controls.bankName.touched && controls.bankName.errors?.required">
-                                        Required field
-                                    </mat-error>
+                                <div class="row kt-margin-b-15">
+                                    <div class="col-4 form-label mandatory">
+                                        <mat-label>Deposit Branch Name</mat-label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input class="form-control" formControlName="branchName"
+                                            placeholder="Branch Name"
+                                            [class.isError]="controls.branchName.touched && controls.branchName.invalid" />
+
+                                        <mat-error
+                                            *ngIf="controls.branchName.touched && controls.branchName.errors?.required">
+                                            Required field
+                                        </mat-error>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div *ngIf="controls.paymentType.value === 'neft'" class="row kt-margin-b-15">
-                                <div class="col-4 form-label mandatory">
-                                    <mat-label>Bank Transaction ID</mat-label>
+                                <div *ngIf="controls.paymentType.value === 'IMPS'" class="row kt-margin-b-15">
+                                    <div class="col-4 form-label mandatory">
+                                        <mat-label>Bank Transaction ID</mat-label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input class="form-control" formControlName="transactionId"
+                                            style="text-transform: uppercase;" placeholder="TRAN04041995"
+                                            [class.isError]="controls.transactionId.touched && controls.transactionId.invalid" />
+
+                                        <mat-error
+                                            *ngIf="controls.transactionId.touched && controls.transactionId.errors?.required">
+                                            Required field
+                                        </mat-error>
+                                    </div>
                                 </div>
-                                <div class="col-8">
-                                    <input class="form-control" formControlName="transactionId"
-                                        [class.isError]="controls.transactionId.touched && controls.transactionId.invalid" />
-
-                                    <mat-error
-                                        *ngIf="controls.transactionId.touched && controls.transactionId.errors?.required">
-                                        Required field
-                                    </mat-error>
-                                </div>
-                            </div>
 
 
-                            <div *ngIf="controls.paymentType.value === 'cheque'" class="row kt-margin-b-15">
-                                <div class="col-4 form-label mandatory">
-                                    <mat-label>Cheque Number</mat-label>
-                                </div>
-                                <div class="col-8">
-                                    <input numbersOnly class="form-control" formControlName="chequeNumber"
-                                        [class.isError]="controls.chequeNumber.touched && controls.chequeNumber.invalid" />
+                                <div *ngIf="controls.paymentType.value === 'cheque'" class="row kt-margin-b-15">
+                                    <div class="col-4 form-label mandatory">
+                                        <mat-label>Cheque Number</mat-label>
+                                    </div>
+                                    <div class="col-8">
+                                        <input numbersOnly class="form-control" formControlName="chequeNumber"
+                                            placeholder="491995" maxlength="6"
+                                            [class.isError]="controls.chequeNumber.touched && controls.chequeNumber.invalid" />
 
-                                    <mat-error
-                                        *ngIf="controls.chequeNumber.touched && controls.chequeNumber.errors?.required">
-                                        Required field
-                                    </mat-error>
+                                        <mat-error
+                                            *ngIf="controls.chequeNumber.touched && controls.chequeNumber.errors?.required">
+                                            Required field
+                                        </mat-error>
+                                        <mat-error
+                                            *ngIf="controls.chequeNumber.touched && controls.chequeNumber.errors?.pattern">
+                                            Invalid Input
+                                        </mat-error>
+                                    </div>
                                 </div>
                             </div>
 
@@ -80,11 +106,6 @@
                                     <mat-label>Deposit Date</mat-label>
                                 </div>
                                 <div class="col-8">
-                                    <!-- <input type="text" class="form-control" [matDatepicker]="picker"
-                                        (click)="picker.open()" formControlName="dateOfBirth"
-                                        [class.isError]="controls.dateOfBirth.touched && controls.dateOfBirth.invalid"
-                                        readonly placeholder="4/5/2020" [max]="minDate"
-                                        (dateChange)="ageValidation()"> -->
                                     <input class="form-control" [matDatepicker]="picker" (click)="picker.open()"
                                         formControlName="depositDate"
                                         [class.isError]="controls.depositDate.touched && controls.depositDate.invalid"
@@ -103,7 +124,7 @@
                                     <mat-label>Deposit Amount </mat-label>
                                 </div>
                                 <div class="col-8">
-                                    <input numbersOnly class="form-control" formControlName="paidAmount"
+                                    <input numbersOnly class="form-control" formControlName="paidAmount" placeholder="0"
                                         [class.isError]="controls.paidAmount.touched && controls.paidAmount.invalid" />
 
                                     <mat-error
