--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -8,25 +8,20 @@
                             [disable]="disabledForm" (id)="scrap($event)" (next)="next($event)">
                         </kt-basic-details>
                     </mat-tab>
-                    <mat-tab label="Customer Acknowledgment">
+                    <mat-tab label="Customer Acknowledgment" [disabled]="disabled[1]">
                         <kt-upload-documents [scrapIds]="scrapIds" [loanDocumnets]="customerDetail">
                         </kt-upload-documents>
-                    </mat-tab>
-                    <!-- <mat-tab label="Nominee Details" [disabled]="disabled[1]">
-                        <kt-nominee-details [action]="action" (next)="next($event)" [disable]="disabledForm"
-                            [details]="customerDetail" [masterAndLoanIds]="masterAndLoanIds">
-                        </kt-nominee-details>
                     </mat-tab>
                     <mat-tab label="Ornaments" [disabled]="disabled[2]">
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab p-0"
                             style="padding:0px !important">
                             <kt-ornaments [action]="action" (next)="next($event)" [disable]="disabledForm"
                                 [details]="customerDetail" (totalAmt)="total($event)" (fullAmt)="fullAmt($event)"
-                                [masterAndLoanIds]="masterAndLoanIds" [ornamentType]="ornamentType">
+                                [scrapIds]="scrapIds" [ornamentType]="ornamentType">
                             </kt-ornaments>
                         </div>
                     </mat-tab>
-                    <mat-tab label="Final Interest Calculator" [disabled]="disabled[3]">
+                    <!-- <mat-tab label="Final Interest Calculator" [disabled]="disabled[3]">
                         <kt-interest-calculator (next)="next($event)" [disable]="disabledForm" [action]="action"
                             (finalLoanAmount)="finalLoanAmount($event)" [totalAmt]="totalAmount"
                             [fullAmount]="fullAmount" [details]="customerDetail" [masterAndLoanIds]="masterAndLoanIds">
