--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -68,8 +68,8 @@
                         </kt-approval>
                     </mat-tab>
 
-                    <mat-tab label="Upload Documents">
-                        <!-- *ngIf="loanStage?.id == 8 || loanStage?.id == 7 || loanStage?.id == 4 || url == 'view-loan'"> -->
+                    <mat-tab label="Upload Documents"
+                         *ngIf="loanStage?.id == 8 || loanStage?.id == 7 || loanStage?.id == 4 || url == 'view-loan'">
                         <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" (next)="next($event)"
                             [loanDocumnets]="customerDetail" [showButton]="showButton"></kt-upload-loan-documents>
                     </mat-tab>
