--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.scss
@@ -14,4 +14,25 @@
         flex-direction: column;
         flex: 0 0 6%;
     }
+
+    .mat-column-loanId {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 0 0 4%;
+
+    }
+    .mat-column-ornaments{
+        flex: 0 0 6%;
+    }
+    .mat-column-tenure{
+        flex: 0 0 3%;
+    }
+    .mat-column-customerId{
+        flex: 0 0 5%;
+    }
+    .mat-column-loanAmount{
+        flex: 0 0 4%;
+    }
+
 }
