Changes in scrap calculator

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-calculator/scrap-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-calculator/scrap-calculator.component.html
@@ -1,5 +1,6 @@
 <kt-portlet>
     <kt-portlet-body>
+        <h5 class="text-center">Tentative Scrap Amount / Rough Amount Calculator</h5>
         <div class="container minHeight">
             <form [formGroup]="roughScrapForm">
                 <div class="row justify-content-start">
@@ -19,7 +20,6 @@
                                 <mat-error *ngIf="controls.grossWeight.errors?.pattern && controls.grossWeight.touched">
                                     Invalid Input
                                 </mat-error>
-
                             </div>
                         </div>
                         <div class="row kt-margin-t-10">
@@ -64,7 +64,7 @@
                             </div>
                             <div class="col-6">
                                 <input type="number" class="form-control" formControlName="purity" min="0"
-                                    placeholder="90 %" (keyup)="calcFineWeight();"
+                                    placeholder="90 %"
                                     [class.isError]="controls.purity.touched && controls.purity.invalid">
                                 <mat-error *ngIf="controls.purity.errors?.required && controls.purity.touched">
                                     Required field
@@ -75,23 +75,9 @@
                                 </mat-error>
                             </div>
                         </div>
-                        <div class="row kt-margin-t-10">
-                            <div class="col-4 form-label">
-                                <label class="mandatory text-color">Fine Weight</label>
-                            </div>
-                            <div class="col-6">
-                                <input type="number" class="form-control" formControlName="fineWeight"
-                                    placeholder="2.00 grams"
-                                    [class.isError]="controls.fineWeight.touched && controls.fineWeight.invalid"
-                                    readonly>
-                                <mat-error *ngIf="controls.fineWeight.errors?.required && controls.fineWeight.touched">
-                                    Required field
-                                </mat-error>
-                            </div>
-                        </div>
                         <div class="row kt-margin-t-30">
                             <div class="offset-4 col-6">
-                                <kt-button [value]="'Calculate'" [type]="'button'" (click)="calculate()">
+                                <kt-button [value]="'Calculate'" [type]="'submit'" (click)="calculate()">
                                 </kt-button>
                             </div>
                         </div>
