--- a/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
@@ -1,6 +1,6 @@
 <div class="col-6 mx-auto parent-container">
     <form [formGroup]="globalSettingForm">
-        <div class="row kt-padding-t-40 ">
+        <div class="row kt-padding-t-40">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">LTV gold
@@ -17,24 +17,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40 ">
-            <div class="col">
-                <div class="row">
-                    <div class="col-6 form-label text-color d-flex align-items-center mandatory">LTV scrap gold
-                        value(%)
-                    </div>
-                    <div class="col-6 per-gram align-items-center">
-                        <input type="text" class="form-control" numbersOnly formControlName="scrapLtvGoldValue"
-                            placeholder="75%"
-                            [class.isError]="controls.scrapLtvGoldValue.invalid && controls.scrapLtvGoldValue.touched">
-                        <mat-error *ngIf="controls.scrapLtvGoldValue.invalid && controls.scrapLtvGoldValue.touched">
-                            Field required</mat-error>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row kt-padding-t-40 ">
+        <div class="row kt-padding-t-40" *ngIf="!showScrapFlag">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Minimum
@@ -53,7 +36,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40 ">
+        <div class="row kt-padding-t-40" *ngIf="!showScrapFlag">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Minimum
@@ -69,7 +52,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40 ">
+        <div class="row kt-padding-t-40" *ngIf="!showScrapFlag">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Grace
@@ -87,7 +70,7 @@
             </div>
         </div>
 
-        <div class="row kt-padding-t-40 ">
+        <div class="row kt-padding-t-40">
             <div class="col">
                 <div class="row">
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Cash
@@ -99,6 +82,40 @@
                             [class.isError]="controls.cashTransactionLimit.invalid && controls.cashTransactionLimit.touched">
                         <mat-error
                             *ngIf="controls.cashTransactionLimit.invalid && controls.cashTransactionLimit.touched">
+                            Field required</mat-error>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row kt-padding-t-40" *ngIf="showScrapFlag">
+            <div class="col">
+                <div class="row">
+                    <div class="col-6 form-label text-color d-flex align-items-center mandatory">Processing
+                        Charges(fixed)</div>
+                    <div class="col-6 per-gram align-items-center">
+                        <input type="text" class="form-control" numbersOnly formControlName="processingChargesFixed"
+                            placeholder="5000"
+                            [class.isError]="controls.processingChargesFixed.invalid && controls.processingChargesFixed.touched">
+                        <mat-error
+                            *ngIf="controls.processingChargesFixed.invalid && controls.processingChargesFixed.touched">
+                            Field required</mat-error>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row kt-padding-t-40" *ngIf="showScrapFlag">
+            <div class="col">
+                <div class="row">
+                    <div class="col-6 form-label text-color d-flex align-items-center mandatory">Processing Charges (%)
+                    </div>
+                    <div class="col-6 per-gram align-items-center">
+                        <input type="text" class="form-control" formControlName="processingChargesInPercent"
+                            placeholder="8"
+                            [class.isError]="controls.processingChargesInPercent.invalid && controls.processingChargesInPercent.touched">
+                        <mat-error
+                            *ngIf="controls.processingChargesInPercent.invalid && controls.processingChargesInPercent.touched">
                             Field required</mat-error>
                     </div>
                 </div>
