--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
@@ -6,11 +6,22 @@
 
     .mat-column-netWeightReleaseOrnament{
         display: flex;
-    flex-direction: column;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     .mat-column-netWeightRemainingOrnament{
         display: flex;
-    flex-direction: column;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .mat-column-loanId {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 0 0 4%;
+    }
+    .mat-column-updateStatus{
+        flex: 0 0 6%;
     }
 }
