--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -108,7 +108,8 @@
                             <button mat-menu-item (click)="viewLoan(loan)">View Loan</button>
                             <button mat-menu-item (click)="interestEmi(loan)">Quick Pay</button>
                             <button mat-menu-item (click)="topUp(loan)">Top Up</button>
-                            <button mat-menu-item (click)="jewelleryRelease(loan)">Jewellery Release</button>
+                            <button *ngIf="!loan.partRelease" mat-menu-item (click)="jewelleryRelease(loan)">Jewellery
+                                Release</button>
                             <button mat-menu-item (click)="newLoan(loan)">Add New Loan</button>
                         </mat-menu>
 
